# nyt-books-elt

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  elt.sh  profiles.yml  pyproject.toml  tox.ini
.github/workflows/: pre-commit-workflow.yml
core/data_retrieval/: ingestion.py  ingestion_settings.py
core/dimensional_modeling/: dbt_project.yml
core/dimensional_modeling/models/: sources.yml
core/dimensional_modeling/models/dimensions/: authors_dimension.sql  books_dimension.sql  dates_dimension.sql  lists_dimension.sql  publishers_dimension.sql
core/dimensional_modeling/models/facts/: best_sellers_facts.sql
core/sql_queries/: query_executor.py
core/sql_queries/results/: least_unique_book.csv  most_weeks_in_top_3.csv  publishers_rank.csv
core/sql_queries/utils/: scripts.py
