[tool.poetry]
name = "coign-analytics-aws-infrastructure"
version = "0.1.0"
description = ""
authors = ["Ricardo Ibarra <raib1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.44"
pandas = "^2.2.0"
numpy = "^1.26.4"
pydantic = "^2.6.1"
pre-commit = "^3.6.2"
snowflake-connector-python = "^3.7.0"
openpyxl = "^3.1.2"
paramiko = "^3.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
