[tool.poetry]
name = "nyt-books-elt"
version = "0.1.0"
description = "DE project"
authors = ["Ricardo Ibarra <raib1997@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
dlt = "^0.4.12"
dbt-duckdb = "^1.8.1"
dbt-core = "^1.8.3"
pandas = "^2.2.2"
pydantic = "^2.7.4"
pydantic-settings = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
